spacing issues

--- a/src/styling/App.scss
+++ b/src/styling/App.scss
@@ -88,6 +88,7 @@ svg {
 
 nav {
   display: flex;
+  min-width: 2000px;
 }
 
 nav ul {
