--- a/src/styling/singleUseStyle.scss
+++ b/src/styling/singleUseStyle.scss
@@ -6,12 +6,11 @@ $separator-size: 8px;
 $separator-border-style: solid;
 $separator-border-color: rgb(255, 204, 0);
 $separator-space-top: 18px;
-
-.SingleUSe {
+.SingleUse {
   width: 100%;
   height: 100%;
   min-height: 1000px;
-  min-width: 1000px;
+  min-width: 2000px;
 }
 
 .recycle-para .MuiPaper-root {
@@ -47,14 +46,14 @@ $separator-space-top: 18px;
   letter-spacing: 0.8px;
 }
 .icon2 {
-  padding-bottom: 2%;
+  padding-bottom: 5%;
 }
 .icon1 {
-  padding-top: 10%;
+  padding-top: 9%;
 }
 
 .icon2 {
-  padding-top: 2%;
+  padding-top: 5%;
 }
 
 .circle-icon-reusable {
@@ -68,7 +67,8 @@ $separator-space-top: 18px;
   font-size: 40px;
   margin-left: 22.5%;
   position: absolute;
-  right: 23%;
+  right: 21.5%;
+  top: 23%;
 }
 
 .circle-icon-reusable2 {
@@ -82,7 +82,8 @@ $separator-space-top: 18px;
   font-size: 40px;
   margin-left: 22.5%;
   position: absolute;
-  right: 23%;
+  right: 21.5%;
+  top: 48%;
 }
 
 .circle-icon-reusable3 {
@@ -96,7 +97,8 @@ $separator-space-top: 18px;
   vertical-align: middle;
   margin-left: 23%;
   position: absolute;
-  right: 23%;
+  right: 21.5%;
+  top: 73%;
 }
 
 .circle-icon-osteofit {
@@ -111,6 +113,7 @@ $separator-space-top: 18px;
   margin-left: 15%;
   position: absolute;
   left: 34%;
+  top: 23%;
 }
 
 .circle-icon-osteofit2 {
@@ -125,6 +128,7 @@ $separator-space-top: 18px;
   margin-left: 28.5%;
   position: absolute;
   left: 20.5%;
+  top: 48%;
 }
 
 .circle-icon-osteofit3 {
@@ -139,6 +143,7 @@ $separator-space-top: 18px;
   margin-left: 18.5%;
   position: absolute;
   left: 30.5%;
+  top: 73%;
 }
 
 section {
@@ -182,18 +187,15 @@ blockquote.speech {
   .iconify {
     font-size: 100px;
     color: #57d75b;
-    top: 32.5%;
+    top: 38%;
     left: 46.6%;
     position: absolute;
+    padding: 0%;
   }
   span {
     position: absolute;
     left: 35%;
     top: 67%;
-
-    img {
-      width: 100%;
-    }
   }
 }
 
@@ -391,7 +393,7 @@ blockquote.speech {
   top: 34%;
   left: 44%;
   position: absolute;
-  background-color: white;
+  background-color: none;
 }
 
 .horz-line4 {
@@ -432,10 +434,10 @@ blockquote.speech {
   border: 0;
   border-bottom: $separator-size $separator-border-style #297caf;
   opacity: 0.8;
-  left: 4%;
+  left: 3%;
   top: 25%;
   position: absolute;
-  max-width: 13%;
+  max-width: 12%;
   animation: separator-width 1s ease-out forwards;
 }
 @keyframes separator-width {
@@ -451,9 +453,9 @@ blockquote.speech {
   border-bottom: $separator-size $separator-border-style #297caf;
   opacity: 0.8;
   position: absolute;
-  left: 4%;
+  left: 3%;
   top: 65%;
-  max-width: 12%;
+  max-width: 11%;
   animation: separator-width 1s ease-out forwards;
 }
 .horz-line3 {
@@ -637,7 +639,7 @@ ol.gradient-list {
   height: 925px;
   h2 {
     position: absolute;
-    left: 5%;
+    left: 4%;
     top: 20%;
     font-size: 40px;
     color: $darkblue;
@@ -658,7 +660,7 @@ ol.gradient-list {
   vertical-align: middle;
   font-size: 40px;
   margin-left: 15%;
-  margin-right: 4%;
+  margin-right: 2%;
 }
 
 .circle-icon-benefits2 {
@@ -671,7 +673,7 @@ ol.gradient-list {
   vertical-align: middle;
   font-size: 40px;
   margin-left: 15%;
-  margin-right: 2.5%;
+  margin-right: 2%;
 }
 
 .benefits h2 {
@@ -724,7 +726,7 @@ ol.gradient-list {
 }
 
 .benefits h2 span .revenue-icon {
-  margin-left: 11.9%;
+  margin-left: 12.2%;
 }
 
 .benefits h2 span .accuracy-icon {
@@ -767,10 +769,12 @@ ol.gradient-list {
   width: 70%;
   margin-left: 18%;
   font-family: "Open Sans", sans-serif;
-  h2 {
-    color: #57d75b;
-    text-align: center;
-    padding-top: 0%;
+  h4 {
+    color: $darkgray;
+    font-size: 148px;
+    position: absolute;
+    left: 46.6%;
+    top: 32%;
   }
   h3 {
     width: 90%;
@@ -789,6 +793,7 @@ ol.gradient-list {
     font-size: 20px;
     left: 23%;
     top: 46%;
+    padding-top: 2%;
   }
 }
 
@@ -840,7 +845,7 @@ ol.gradient-list {
 .osteofit-timeline-quote {
   position: absolute;
   color: #555555;
-  top: 68%;
+  top: 69%;
   width: 80%;
   left: 44%;
   letter-spacing: 1px;
@@ -943,4 +948,39 @@ ol.gradient-list {
   width: auto;
   position: relative;
   left: 85%;
+}
+
+.mold1pic {
+  width: 250px;
+  height: 250px;
+  position: absolute;
+  bottom: 8%;
+  right: 28.5%;
+}
+
+.mold2pic {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  left: 26.5%;
+  bottom: 10%;
+}
+
+.bigGreenAndSymbol {
+  position: absolute !important;
+  z-index: 3 !important;
+  font-size: 1000px !important;
+  color: #57d75b !important;
+}
+
+.firstH2 {
+  color: #57d75b;
+  text-align: center;
+  padding-top: 0%;
+}
+
+.pictureAndDesc {
+  p {
+    font-size: 100px;
+  }
 }
